--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -19,3 +19,10 @@ p span.source-code {
   font-size: 0.90em;
   font-family: 'Source Code Pro', 'Segoe UI', sans-serif;
 }
+
+pre {
+  background-color: #dad9d4;
+  border: none;
+  line-height: 0.625em;
+  font-size: 0.80em;
+}
