--- a/app/assets/stylesheets/site-specific.css
+++ b/app/assets/stylesheets/site-specific.css
@@ -16,7 +16,6 @@ h1, h2, h3 {
 p {
     font-size: 1em;
     font-weight: 400;
-    line-height: 1.5em;
     text-indent:0.626em;
 }
 
